<resources>
    <string name="app_name">AtonTest</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="fio">fio</string>
    <string name="error_login_vk">Программа не может работать без авторизации в Вк</string>
    <string name="error_no_id">id не обработан</string>
    <string name="error_internet">Ошибка, вкл интернет и перезапустите приложение!</string> <!--hi-->
</resources>
